Bug 489234 - Replace new Integer(int) with Integer.valueOf()
Changes for 
org.eclipse.ui.ide
org.eclipse.ui.navigator

Change-Id: Ic85e8a51706f58a04cef3d77d22d08e4dcf7ace4
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>